--- a/typography.html
+++ b/typography.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md">
+            <div class="col-md-5">
                 <img src="assets/images/poster.webp"> 
             </div>
         </div>
