--- a/ux-campus-food.html
+++ b/ux-campus-food.html
@@ -36,30 +36,114 @@
         Josephine Aaron Weathington
         </div>
     </header>
-<div class="container">
-<div class="wrap">
-    <h1>CPSC 4379 FOOD ORDERING SERVICE APP 2022</h1>
-    <p>A prototype design of a food app for a college campus that allows the various restaurants on campus to deliver directly to 
-        students & faculty.</p>
-    <a href="">Interact with the prototype.</a>
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-6 col-md-4">
+                <h1>CPSC 4379 FOOD ORDERING SERVICE APP 2022</h1>
+                <p>A prototype design of a food app for a college campus that allows the various restaurants on campus to deliver directly to 
+        students & faculty. Scroll down to review my development process.</p>
+                <a href="">Interact with the prototype.</a>
+            </div>
+            <div class="col-md-8">
+                <img src="" alt="">
+            </div>
+        </div>
 
-<!--ARTICLES-->
-<div class="wrap">
-    <h1>RESEARCH</h1>
-</div>
+        <!--SECTIONS-->
+        <section class="research">
+            <h1>RESEARCH</h1>
+            <div class="row">
+                <div class="col-md-1">
+                    <a href="image">image personas</a>
+                </div>
+            </div>
+            <div class="row justify-content-end">
+                <div class="col-md-1">
+                    <a href="image">image scenario map</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md">
+                    <a href="image">image storyboard.1</a>
+                </div>
+                <div class="col-md">
+                    <a href="image">image storyboard.2</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md">
+                    <a href="image">image storyboard.3</a>
+                </div>
+                <div class="col-md">
+                    <a href="image">image storyboard.4</a>
+                </div>
+            </div>
+        </section>
 
-<div class="wrap">
-    <h1>DESIGN FLOW</h1>
-</div>
+        <section class="design-phase">
+            <h1>DESIGN FLOW</h1>
+            <div class="row">
+                <div class="col-md-1">
+                    <a href="image">image flow plan</a>
+                </div>
+            </div>
+            <div class="row justify-content-end">
+                <div class="col-md-1">
+                    <a href="image">image flow path</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md">
+                    <a href="image">image wireframe.1</a>
+                </div>
+                <div class="col-md">
+                    <a href="image">image wireframe.2</a>
+                </div>
+            </div>
+        </section>
 
-<div class="wrap">
-    <h1>PROTOTYPE PROCESS</h1>
-</div>
+        <section class="prototype-process">
+            <h1>PROTOTYPE PROCESS</h1>
+            <div class="row">
+                <div class="col-md-1">
+                    <a href="image">image flow plan</a>
+                </div>
+            </div>
+            <div class="row justify-content-end">
+                <div class="col-md-1">
+                    <a href="image">image flow path</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md">
+                    <a href="image">image wireframe.1</a>
+                </div>
+                <div class="col-md">
+                    <a href="image">image wireframe.2</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-1">
+                    <a href="image">image of repeat</a>
+                </div>
+            </div>
+            <div class="row justify-content-end">
+                <div class="col-md-1">
+                    <a href="image">image final wireframe</a>
+                </div>
+            </div>
+        </section>
 
-<div class="wrap">
-    <h1>USABILITY TEST ANALYSIS</h1>
-</div>
+        <section class="usability-test">
+            <h1>USABILITY TESTING</h1>
+            <div class="row">
+                <div class="col-md">
+                    <p>Review user testing process & analysis here.</p>
+                </div>
+                <div class="col-md">
+                    <a href="image">image of...</a>
+                </div>
+        </section>
 <!--END OF ARTICLES-->
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
